--- a/css-reference.css
+++ b/css-reference.css
@@ -1,24 +1,31 @@
 body{
   font-family: "Courier New",Georgia,Serif;
+  background-color:	 #e6ffff;
+
 }
+a:hover { 
+    background-color: white;
+}
+
 
 .Table,th,td {
   border: 2px solid blue;
   color:blue;
-  background-color:lightblue;
+  background-color:#e6eeff;
 }
 
 h1 {
-  background-color: lightblue;
-  color: blue;
+  background-color: lightgreen;
+  text-align: center;
 }
 
 h2 {
-  background-color: blue;
-  color: lightblue;
+  background-color: lightgreen;
 }
 
 p {
-  background-color: lightblue;
+  background-color: #e6eeff;
 }
-
+a {
+  color:blue;
+}
